# box-core

./: README.md
box-sfu/: .env.sample  Cargo.toml  readme.md
box-sfu/src/: main.rs
box-sfu/src/config/: app.rs
box-sfu/src/service/: connection_manager.rs  mod.rs  ws.rs
