[package]
name = "box-sfu"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.27"
once_cell = "1.21.3"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = "0.26.2"
uuid = { version = "1.16.0", features = ["v4"] }
